# python-grpc-service-uv-basic.archetype

./: .gitignore  CHANGELOG.md  README.md  VALIDATION_README.md  answers.yaml  archetype.rhai  archetype.yaml  prepare-content.sh  run-templatize.sh  test_answers_complete.yaml  validate_archetype.sh
contents/base/{{ prefix-name }}-{{ suffix-name }}/: .gitignore  .grpc_generation_marker  Dockerfile  README.md  build_hook.py  docker-compose.yml  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json
contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contents/base/{{ prefix-name }}-{{ suffix-name }}/.github/workflows/: build.yml  ci.yml  cut-tag.yml  integration-tests.yml  promote-prd.yml  promote-stg.yml  release.yml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/base/: application.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/dev/: application_patch.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/prd/: application_patch.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/.platform/kubernetes/stg/: application_patch.yaml
contents/base/{{ prefix-name }}-{{ suffix-name }}/monitoring/: prometheus.yml
contents/base/{{ prefix-name }}-{{ suffix-name }}/monitoring/grafana/dashboards/: grpc-service.json
contents/base/{{ prefix-name }}-{{ suffix-name }}/scripts/: generate-grpc.sh  generate_grpc.py  init-db.sql  install-protoc.sh  run-integration-tests.sh  run-tests.sh  setup-dev.sh  start-dev.sh
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/: example_service.py  models.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/exception/: error_code.py  service_exception.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-client/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-core/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/core/: example_service_core.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/: conftest.py  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests/integration/: test_example_service_integration.py  test_grpc_connectivity.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-integration-tests/tests/utils/: grpc_test_utils.py  test_fixtures.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/: alembic.ini  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/alembic/: env.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/alembic/versions/: 001_initial_database_schema.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-persistence/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/persistence/models/: base.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-proto/: build_proto.py  pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/: main.py  migration.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/config/: settings.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/health/: health_checks.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-server/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/server/middleware/: auth.py  tracing.py
