[tool.poetry]
name = "{{ prefix-name }}-{{ suffix-name }}-api"
version = "0.1.0"
description = "API interfaces and contracts for Example Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "{{ org-name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"