[tool.poetry]
name = "{{ prefix-name }}-{{ suffix-name }}-persistence"
version = "0.1.0"
description = "Persistence layer for Example Service with SQLAlchemy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "{{ org-name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
testcontainers = "^3.7.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"