[tool.poetry]
name = "{{ prefix-name }}-{{ suffix-name }}-proto"
version = "0.1.0"
description = "Protocol Buffer definitions for Example Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "{{ org-name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false