[project]
name = "{{ prefix-name }}-{{ suffix-name }}-proto"
version = "0.1.0"
description = "Protocol Buffer definitions for Example Service"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "protobuf>=4.25.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"